syntax = "proto3";

// The "google/protobuf" import folder provides several types that
// are included with protoc. This one is a representation of
// timestamps/dates.
import "google/protobuf/timestamp.proto";

option java_package = "com.soprasteria.fsservice";
option go_package = "api";

service FsService {
  // list files in a directory
  rpc List(ListFilesRequest) returns (stream File);
  
  // cat file content
  rpc Cat(CatFileRequest) returns (stream FileContent);
}

message ListFilesRequest {
  string path_name = 1;
}

message File {
  bool is_directory = 1;
  int32 size = 2;
  google.protobuf.Timestamp last_access_time = 3;
  string file_name = 4;
}

message CatFileRequest {
  string path_name = 1;
}

message FileContent {
  bytes chunk = 1;
}